--- a/bin/hyper.yaml
+++ b/bin/hyper.yaml
@@ -18,3 +18,8 @@ trainingInput:
       - 1024
       - 2048
       - 4096
+    - parameterName: convolutional
+      type: DISCRETE
+      discreteValues:
+      - 0
+      - 1
